add the description and video

--- a/description.html
+++ b/description.html
@@ -1,6 +1,7 @@
 <!-- HEAD SECTION -->
 <!-- IE Edge Meta Tag -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <!-- Viewport -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Minified CSS -->
@@ -39,9 +40,10 @@
     </nav>
 
     <div id="mainpage-search" class="jumbotron text-center">
-    <h2 style="text-align:left">Our Mission:  </h2>
+    <h2 style="color:white">Our Project:  </h2>
     <hr>
-    <h3 style="text-align:left">recognize different eating gestures</h3> 
+    <h3 style="color:white"  >Many diseases are associate with eating habit. Among all the diseases, obesity has become one of the main challenges of people’s daily live. Thus, understanding an individual’s dietary behavior would give us better sense to improve eating habit.
+This project aims to sense the accelerate from X, Y, Z and gyro from X, Y, Z using Microsoft band to detecting hand to mouth gesture.<br> <br>  Four different gestures (eating burger with hand, drinking soup with spoon, eating noodles with folk and eating steak with knife) can be detected and then recognized by analyzing data using machine learning in the background. Besides, a proximity neck sensor is also applied to detect the frequency of corresponding eating gesture. <br> <br>As the result of all the hand-to-mouth gesture detecting system, users could get feedback of their eating types and their eating frequency.</br></br></br></br></h3> 
     <br>
                  
     </div>
