--- a/source.html
+++ b/source.html
@@ -37,10 +37,13 @@
             </div>
         </div>
     </nav>
-    <div class="container" id="mainlow">
-    <h1>
-      Souce Code:
+    <div class="container" id="mainpage-search">
+    <h1 style= "color: white">
+      Source code and Data:
     </h1>
+    <hr>
+    <h2 style= "color: white">Please download the code and data at:</h2>
+    <a href="https://github.com/caffery24/DemoWebSite-for-mHealth" style= "color: white"> https://github.com/caffery24/DemoWebSite-for-mHealth</a>
     </div>
         <footer class="footer">
         <div class="container">
