upload the web and finalize the web

--- a/description.html
+++ b/description.html
@@ -33,38 +33,28 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav nav-pills navbar-right">
                     <li><a href="source.html">Source Code and Data</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Report</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div id="mainpage-search" class="jumbotron text-center">
-    <h2 style="color:white">Our Project:  </h2>
+    <div id="desc" class="jumbotron text-left">
+    <h2 style="color:black padding-left:10px">Our Project:  </h2>
     <hr>
-    <h3 style="color:white"  >Many diseases are associate with eating habit. Among all the diseases, obesity has become one of the main challenges of people’s daily live. Thus, understanding an individual’s dietary behavior would give us better sense to improve eating habit.
-This project aims to sense the accelerate from X, Y, Z and gyro from X, Y, Z using Microsoft band to detecting hand to mouth gesture.<br> <br>  Four different gestures (eating burger with hand, drinking soup with spoon, eating noodles with folk and eating steak with knife) can be detected and then recognized by analyzing data using machine learning in the background. Besides, a proximity neck sensor is also applied to detect the frequency of corresponding eating gesture. <br> <br>As the result of all the hand-to-mouth gesture detecting system, users could get feedback of their eating types and their eating frequency.</br></br></br></br></h3> 
-    <br>
+    <p style="color:black"  >   Many diseases are associate with eating habit. Among all the diseases, obesity has become one of the main challenges of people’s daily live. Thus, understanding an individual’s dietary behavior would give us better sense to improve eating habit.
+This project aims to sense the accelerate from X, Y, Z and gyro from X, Y, Z using Microsoft band to detecting hand to mouth gesture.</p>
+
+    <p>  Four different gestures (eating burger with hand, drinking soup with spoon, eating noodles with folk and eating steak with knife) can be detected and then recognized by analyzing data using machine learning in the background. Besides, a proximity neck sensor is also applied to detect the frequency of corresponding eating gesture. </p>  
+    <p>As the result of all the hand-to-mouth gesture detecting system, users could get feedback of their eating types and their eating frequency.</p> 
+    
                  
     </div>
         <footer class="footer">
         <div class="container">
             <div class="row">
-                <p class="col-xs-4">&copy; 2016 Team Woofcat!</p>
-                <ul class="text-right">
-                    <li class="col-xs-2">
-                        <a href="#">Emergency Contact</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Resource</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Support</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Contact Us</a>
-                    </li>
-                </ul>
+                                <p class="col-xs-4">&copy; 2016 Team Hand-To-Mouth Gesture Recognition !</p>
+
             </div>
         </div>
     </footer>
