--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav nav-pills navbar-right">
                     <li><a href="source.html">Source Code and Data</a></li>
+                     <li><a href="contact.html">Report</a></li>
                     
                 </ul>
             </div>
@@ -63,9 +64,9 @@
       <div class="col-md-2  col-md-offset-2 listitem">
         <div>
           <img src="burger.png" alt="Texto Alternativo" class="img-circle img-thumbnail">
-          <h2 style="color:white">Implementation:</h2>
+          <h2 style="color:white">TimeLine:</h2>
           <div class="list-group mainpage-list">
-                      <a href="process.html" class="list-group-item">China Town Town Town Town Town Town Town  Town Town Town Town Town v Town  Town Town Town Town  Town  Town Town TTownown Town Town Town Town Town Town Town Tv Town Town Town...</a>
+                      <a href="process.html" class="list-group-item">Within this part, we describe the whole timeline of our project. Within each part, we talk about our work and implementation about that part.</a>
          </div>
         </div>
       </div>    
@@ -87,21 +88,8 @@
         <footer class="footer">
         <div class="container">
             <div class="row">
-                <p class="col-xs-4">&copy; 2016 Team Woofcat!</p>
-                <ul class="text-right">
-                    <li class="col-xs-2">
-                        <a href="#">Emergency Contact</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Resource</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Support</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Contact Us</a>
-                    </li>
-                </ul>
+                <p class="col-xs-4">&copy; 2016 Team Hand-To-Mouth Gesture Recognition !</p>
+
             </div>
         </div>
     </footer>
