--- a/process.html
+++ b/process.html
@@ -1,6 +1,8 @@
 <!-- IE Edge Meta Tag -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <!-- Viewport -->
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -46,12 +48,17 @@
       <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          <h4 class="timeline-title">Problem defined </h4>
           
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+          <p>The primary goal of this project is to “recognize different eating gestures”. Our secondary goal, if time lets, is to detect the frequency of corresponding gestures and providing helpful feedbacks to the users. 
+          Different gestures are as follow:
+           Eating with fork;
+           Eating with spoon;
+           Eating with Chinese sticks;
+           Eating by hand;
+</p>
         </div>
       </div>
     </li>
@@ -59,14 +66,10 @@
       <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          <h4 class="timeline-title">HardWare Selection </h4>
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-          <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere
-            pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing
-            elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
+          <p>We chose two different sensors to collect the data we need. One is Microsoft Band 2, because it has embedded 3-axis accerleration sensor and 3-axis gyrometer which can give us accerleration data and gyro data. And we also use a proximity sensor Infrared Proximity Sensor Short Range - Sharp GP2Y0A41SK0F  which can give us the distance between neck and wrist.</p>
         </div>
       </div>
     </li>
@@ -74,22 +77,20 @@
       <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          <h4 class="timeline-title">Plan of the future implementation</h4>
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+          <p>Our project has 2 steps --- data collection and data analysis. Within the first part, we use a smart phone to collect the data send form the sensor and upload them to the database. Withink the second part, we visulize the data and use machine learning model to classify different data corresponding to different gesture.</p>
         </div>
       </div>
     </li>
     <li class="timeline-inverted">
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          <h4 class="timeline-title">Microsoft Band and proximity data collection </h4>
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+          <p>We use the SDK provided by Microsoft to receive the sensor data from the Microsoft Band. After the smart phone has received the data, it uploads all the database to the specific database in real time.And we connect a multiprocessor to the proximity sensor which can directly complete AD change and upload the data to the database.</p>
         </div>
       </div>
     </li>
@@ -97,35 +98,20 @@
       <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          <h4 class="timeline-title">Data visulization </h4>
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-          <hr>
-          <div class="btn-group">
-            <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-              <i class="glyphicon glyphicon-cog"></i> <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </div>
+          <p>The data visulazition is used to visualized data collected from Microsoft Band, which is accerleration and gyro data in three coordinates. We use MatLAB to visualize the data. For each data, we plot them in time zone.</p>
         </div>
       </div>
     </li>
     <li>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          <h4 class="timeline-title">Machine Learning</h4>
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+          <p>First, we perform windowing on the obtained time series data from previous step. The main purpose of windowing is to consider the temporal sequencing between samples.The next step is modeling the windowed samples. We study different modeling technique to find the most appropriate one for our purpose. </p>
         </div>
       </div>
     </li>
@@ -133,11 +119,10 @@
       <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          <h4 class="timeline-title">Experiment and Result</h4>
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+          <p>We have collect 7 participants' data as our trainning data. And we have also test 2 participants. The final accuracy can reach 80%.</p>
         </div>
       </div>
     </li>
@@ -147,21 +132,8 @@
         <footer class="footer">
         <div class="container">
             <div class="row">
-                <p class="col-xs-4">&copy; 2016 Team Woofcat!</p>
-                <ul class="text-right">
-                    <li class="col-xs-2">
-                        <a href="#">Emergency Contact</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Resource</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Support</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Contact Us</a>
-                    </li>
-                </ul>
+                           <p class="col-xs-4">&copy; 2016 Team Hand-To-Mouth Gesture Recognition !</p>
+
             </div>
         </div>
     </footer>
