--- a/result.html
+++ b/result.html
@@ -32,7 +32,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav nav-pills navbar-right">
                     <li><a href="source.html">Source Code and Data</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Report</a></li>
                 </ul>
             </div>
         </div>
@@ -45,21 +45,8 @@
         <footer class="footer">
         <div class="container">
             <div class="row">
-                <p class="col-xs-4">&copy; 2016 Team Woofcat!</p>
-                <ul class="text-right">
-                    <li class="col-xs-2">
-                        <a href="#">Emergency Contact</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Resource</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Support</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Contact Us</a>
-                    </li>
-                </ul>
+          <p class="col-xs-4">&copy; 2016 Team Hand-To-Mouth Gesture Recognition !</p>
+
             </div>
         </div>
     </footer>
