--- a/source.html
+++ b/source.html
@@ -32,37 +32,26 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav nav-pills navbar-right">
                     <li><a href="source.html">Source Code and Data</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Report</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container" id="mainpage-search">
-    <h1 style= "color: white">
+    <div class="container" id="source">
+    <h1 style= "color: black">
       Source code and Data:
     </h1>
     <hr>
-    <h2 style= "color: white">Please download the code and data at:</h2>
-    <a href="https://github.com/caffery24/DemoWebSite-for-mHealth" style= "color: white"> https://github.com/caffery24/DemoWebSite-for-mHealth</a>
+    <h2 style= "color: black">Please download the code and data at:</h2>
+    <a href="https://github.com/caffery24/DemoWebSite-for-mHealth" style= "color: blue"> https://github.com/caffery24/DemoWebSite-for-mHealth</a>
+    <h2 style= "color: black">Please download the demo video at :</h2>
+    <a href="https://www.youtube.com/watch?v=hU74xhW_oH8" style= "color: blue"> https://www.youtube.com/watch?v=hU74xhW_oH8</a>
     </div>
         <footer class="footer">
         <div class="container">
             <div class="row">
-                <p class="col-xs-4">&copy; 2016 Team Woofcat!</p>
-                <ul class="text-right">
-                    <li class="col-xs-2">
-                        <a href="#">Emergency Contact</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Resource</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Support</a>
-                    </li>
-                    <li class="col-xs-2">
-                        <a href="#">Contact Us</a>
-                    </li>
-                </ul>
+                               <p class="col-xs-4">&copy; 2016 Team Hand-To-Mouth Gesture Recognition !</p>
+
             </div>
         </div>
     </footer>
