--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- HEAD SECTION -->
-<!-- IE Edge Meta Tag -->
+<! IE Edge Meta Tag -->
+
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <!-- Viewport -->
