--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- HEAD SECTION -->
+<-- HEAD SECTION -->
 <!-- IE Edge Meta Tag -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <!-- Viewport -->
